corrected the center alignment

--- a/style.css
+++ b/style.css
@@ -2,12 +2,26 @@ body {
   font-family: "poppins";
   font-size: 16px;
   padding: 0;
+  align-items: center;
+  margin: 20px;
 }
-
+.left-align {
+  text-align: left;
+}
+.right-align {
+  text-align: right;
+}
+.center-align {
+  align-items: center;
+  text-align: center;
+  width: 700px;
+  padding: 0%;
+  margin: 0%;
+}
 .flex-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   align-content: center;
   flex-wrap: wrap;
